Changes to projects

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
                             <span class="project-badge">Python</span>
                         </div>
                         <p class="project-description">
-                            A Python application for displaying gyroscope data in a matrix format with real-time visualization.
+                            A Python application that drives an LED matrix display using a gyroscope sensor as the controller.
                         </p>
                         <div class="project-links">
                             <a href="https://github.com/camptwright/gyro-matrix-display" target="_blank" rel="noopener noreferrer" class="project-link">
