Update resume links to use correct file name

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                 <h1 class="section-title">Resume</h1>
                 <div class="resume-container">
                     <div class="resume-actions">
-                        <a href="Campbell Wright Resume.pdf" download="Campbell_Wright_Resume.pdf" class="btn btn-primary">
+                        <a href="Campbell_Wright_Resume.pdf" download="Campbell_Wright_Resume.pdf" class="btn btn-primary">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                                 <polyline points="7 10 12 15 17 10"></polyline>
@@ -39,8 +39,8 @@
                         </a>
                     </div>
                     <div class="resume-viewer">
-                        <iframe src="CWrightResume (1).pdf" type="application/pdf" class="pdf-viewer">
-                            <p>Your browser does not support PDFs. <a href="CWrightResume (1).pdf" download>Download the resume</a> instead.</p>
+                        <iframe src="Campbell_Wright_Resume.pdf" type="application/pdf" class="pdf-viewer">
+                            <p>Your browser does not support PDFs. <a href="Campbell_Wright_Resume.pdf" download>Download the resume</a> instead.</p>
                         </iframe>
                     </div>
                 </div>
