Adding headshot, removing project links

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,10 @@
             <div class="container">
                 <h1 class="section-title">Get In Touch</h1>
                 <div class="contact-content">
+                    <!-- Professional Photo - Replace 'images/professional-photo.jpg' with your actual photo path -->
+                    <div class="contact-image">
+                        <img src="headshot.JPG" alt="Campbell Wright" class="professional-photo">
+                    </div>
                     <p class="contact-text">
                         I'm always open to discussing new opportunities, interesting projects, or just having a conversation 
                         about technology and software development. Feel free to reach out through any of these channels:
